[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/rooms/draw_a_paw.gd" type="Script" id=3]
[ext_resource path="res://scripts/draw_with_knobs.gd" type="Script" id=4]
[ext_resource path="res://scripts/ttt_draw.gd" type="Script" id=5]
[ext_resource path="res://assets/rooms/draw_a_paw.png" type="Texture" id=6]
[ext_resource path="res://scripts/draw_a_paw_knob.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/draw_a_paw_knob.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/ttt_done.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "shake"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.1, 1.7, 2.1, 2.7, 3.2, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 9.52442, -7.44696, 8.30981, -5.0, 8.30981, -7.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear"
} ]
}

[node name="room_instance" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="state_handler" type="Control" parent="."]
theme = ExtResource( 2 )
script = ExtResource( 3 )
default_music = "_pass"

[node name="white" type="ColorRect" parent="state_handler"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true
}

[node name="paw" type="Control" parent="state_handler"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 1220, 623.729 )

[node name="draw" type="Control" parent="state_handler/paw"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="draw_viewport" type="Viewport" parent="state_handler/paw/draw"]
size = Vector2( 1280, 720 )
transparent_bg = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2

[node name="pen" type="Control" parent="state_handler/paw/draw/draw_viewport"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 5 )

[node name="loaded_texture" type="TextureRect" parent="state_handler/paw/draw"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="draw_texture" type="TextureRect" parent="state_handler/paw/draw"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="tip" type="ColorRect" parent="state_handler/paw/draw"]
margin_right = 4.0
margin_bottom = 4.0
color = Color( 0, 0, 0, 1 )

[node name="bg" type="Sprite" parent="state_handler/paw"]
texture = ExtResource( 6 )
centered = false

[node name="left_knob" type="Button" parent="state_handler/paw"]
margin_left = 280.0
margin_top = 570.0
margin_right = 331.0
margin_bottom = 619.0
rect_pivot_offset = Vector2( 26.4538, 22.3453 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
key_left = "Q"
key_right = "W"

[node name="TextureRect" type="TextureRect" parent="state_handler/paw/left_knob"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.147
margin_top = -43.4075
margin_right = 43.853
margin_bottom = 40.5925
rect_pivot_offset = Vector2( 43.878, 41.0737 )
texture = ExtResource( 8 )

[node name="right_knob" type="Button" parent="state_handler/paw"]
margin_left = 950.0
margin_top = 570.0
margin_right = 1001.0
margin_bottom = 619.0
rect_pivot_offset = Vector2( 26.4538, 22.3453 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
key_left = "O"
key_right = "P"

[node name="TextureRect" type="TextureRect" parent="state_handler/paw/right_knob"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.147
margin_top = -43.4075
margin_right = 43.853
margin_bottom = 40.5925
rect_pivot_offset = Vector2( 43.878, 41.0737 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/paw"]
playback_speed = 3.0
anims/shake = SubResource( 1 )

[node name="back_button" type="Button" parent="state_handler"]
anchor_right = 1.0
margin_left = 1060.75
margin_top = 333.882
margin_right = 1254.75
margin_bottom = 404.882
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="state_handler/back_button"]
position = Vector2( 2.55439, -29.7181 )
texture = ExtResource( 9 )
centered = false

[node name="Label" type="Label" parent="state_handler/back_button"]
margin_left = 68.8147
margin_top = 19.9905
margin_right = 125.815
margin_bottom = 53.9905
rect_pivot_offset = Vector2( -555.677, -604.755 )
text = "back"

[node name="erase_button" type="Button" parent="state_handler"]
anchor_right = 1.0
margin_left = 22.3046
margin_top = 332.99
margin_right = 216.305
margin_bottom = 403.99
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="state_handler/erase_button"]
position = Vector2( 0.554386, -29.7181 )
texture = ExtResource( 9 )
centered = false

[node name="Label" type="Label" parent="state_handler/erase_button"]
margin_left = 63.2745
margin_top = 18.9905
margin_right = 128.275
margin_bottom = 52.9905
rect_pivot_offset = Vector2( -555.677, -604.755 )
text = "erase"
align = 1

[connection signal="draw" from="state_handler/paw/draw/draw_viewport/pen" to="state_handler/paw/draw/draw_viewport/pen" method="_on_draw"]
[connection signal="button_down" from="state_handler/paw/left_knob" to="state_handler/paw/left_knob" method="_on_volume_button_down"]
[connection signal="button_up" from="state_handler/paw/left_knob" to="state_handler/paw/left_knob" method="_on_volume_button_up"]
[connection signal="rotated" from="state_handler/paw/left_knob" to="state_handler/paw/draw" method="_on_left_knob_rotated"]
[connection signal="button_down" from="state_handler/paw/right_knob" to="state_handler/paw/right_knob" method="_on_volume_button_down"]
[connection signal="button_up" from="state_handler/paw/right_knob" to="state_handler/paw/right_knob" method="_on_volume_button_up"]
[connection signal="rotated" from="state_handler/paw/right_knob" to="state_handler/paw/draw" method="_on_right_knob_rotated"]
[connection signal="pressed" from="state_handler/back_button" to="state_handler" method="back"]
[connection signal="pressed" from="state_handler/erase_button" to="state_handler" method="erase"]
